--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "us-regions": "0.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
